--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   font-family: "Open Sans";
+  box-sizing: border-box;
 }
 
 html {
@@ -11,13 +13,11 @@ html {
 
 .first_screen_wrapper {
   width: 100vw;
-  height: 100vh;
   background-position: center;
   background-size: cover;
 }
 .first_screen_wrapper .hero_image_wrapper {
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,9 +41,101 @@ html {
   position: fixed;
   top: 10px;
   left: 50%;
+  width: 155px;
+  height: 38px;
   transform: translateX(-50%);
 }
 
-p {
-  display: none;
+.content_wrapper {
+  width: 958px;
+  min-width: 335px;
+  margin: auto;
+}
+.content_wrapper .filters_wrapper {
+  display: grid;
+  grid-template-columns: 3fr 2fr 1.5fr 1fr 1fr;
+  grid-gap: 10px;
+  margin-bottom: 60px;
+}
+.content_wrapper .filters_wrapper .filter_wrapper {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.content_wrapper .filters_wrapper .filter_wrapper label {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 15.23px;
+  color: #9A9A9A;
+  margin-bottom: 6px;
+}
+.content_wrapper .filters_wrapper .filter_wrapper input, .content_wrapper .filters_wrapper .filter_wrapper select {
+  background: rgba(255, 255, 255, 0.1019607843);
+  outline: none;
+  border: none;
+  padding: 8px 12px;
+  color: #EBEBEB;
+  font-weight: 400;
+  font-size: 13px;
+  box-sizing: border-box;
+  height: 36px;
+}
+.content_wrapper .filters_wrapper .filter_wrapper select {
+  appearance: none;
+}
+.content_wrapper .filters_wrapper .filter_wrapper .select_down_arrow {
+  width: 18px;
+  position: absolute;
+  right: 12px;
+  bottom: 10px;
+  pointer-events: none;
+}
+.content_wrapper .filters_wrapper .filter_wrapper .hero_name_filter {
+  width: 100%;
+}
+.content_wrapper .filters_wrapper .filter_wrapper .icon_image_wrapper {
+  width: 40px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 36px;
+  background-color: #A76831;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
+.content_wrapper .filters_wrapper .datepicker .icon_image_wrapper {
+  pointer-events: none;
+}
+.content_wrapper .hero_cards {
+  display: grid;
+  grid-template-columns: repeat(6, 143px);
+  grid-gap: 20px;
+  margin-bottom: 200px;
+}
+.content_wrapper .hero_cards .hero_card {
+  color: #EBEBEB;
+}
+.content_wrapper .hero_cards .hero_card img {
+  width: 142px;
+  height: 142px;
+  margin-bottom: 15px;
+}
+.content_wrapper .hero_cards .hero_card h2 {
+  font-size: 13px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 15.23px;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+}
+.content_wrapper .hero_cards .hero_card p {
+  font-size: 13px;
+  font-weight: 400;
+  text-align: center;
+  line-height: 15.23px;
+  margin-bottom: 8px;
+  color: #9A9A9A;
 }
