--- a/static/css/home.scss
+++ b/static/css/home.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     font-family: "Open Sans";
+    box-sizing: border-box;
 }
 
 html {
@@ -11,13 +14,13 @@ html {
 
 .first_screen_wrapper {
     width: 100vw;
-    height: 100vh;
+    // height: 100vh;
     background-position: center;
     background-size: cover;
     
     .hero_image_wrapper {
         width: 100%;
-        height: 100vh;
+        // height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -44,12 +47,124 @@ html {
         position: fixed;
         top: 10px;
         left: 50%;
+        width: 155px;
+        height: 38px;
         transform: translateX(-50%);
     }
 }
 
+.content_wrapper {
+    width: 958px;
+    min-width: 335px;
+    margin: auto;
 
+    .filters_wrapper {
+        display: grid;
+        grid-template-columns: 3fr 2fr 1.5fr 1fr 1fr;
+        grid-gap: 10px;
+        margin-bottom: 60px;
 
-p {
-    display: none;
+        .filter_wrapper {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+
+            label {
+                font-family: 'Roboto', sans-serif;
+                font-weight: 400;
+                font-size: 13px;
+                line-height: 15.23px;
+                color: #9A9A9A;
+                margin-bottom: 6px;
+            }
+
+            input, select {
+                background: #FFFFFF1A;
+                outline: none;
+                border: none;
+                padding: 8px 12px;
+                color: #EBEBEB;
+                font-weight: 400;
+                font-size: 13px;
+                box-sizing: border-box;
+                height: 36px;
+            }
+
+            select {
+                appearance: none;
+            }
+
+            .select_down_arrow {
+                width: 18px;
+                position: absolute;
+                right: 12px;
+                bottom: 10px;
+                pointer-events: none;
+            }
+
+            .hero_name_filter {
+                width: 100%;
+            }
+
+            .icon_image_wrapper {
+                width: 40px;
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                height: 36px;
+                background-color: #A76831;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                box-sizing: border-box;
+            }
+        }
+
+        .datepicker {
+            .icon_image_wrapper {
+                pointer-events: none;
+            }
+        }
+    }
+
+    .hero_cards {
+        display: grid;
+        grid-template-columns: repeat(6, 143px);
+        grid-gap: 20px;
+        margin-bottom: 200px;
+
+        .hero_card {
+            img {
+                width: 142px;
+                height: 142px;
+                margin-bottom: 15px;
+            }
+
+            color: #EBEBEB;
+
+            h2 {
+                font-size: 13px;
+                font-weight: 700;
+                text-align: center;
+                line-height: 15.23px;
+                text-transform: uppercase;
+                margin-bottom: 8px;
+            }
+
+            p {
+                font-size: 13px;
+                font-weight: 400;
+                text-align: center;
+                line-height: 15.23px;
+                margin-bottom: 8px;
+                color: #9A9A9A;
+            }
+        }
+    }
+
+    
 }
+
+// p {
+//     display: none;
+// }
