--- a/static/css/home.css
+++ b/static/css/home.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 html {
   background-color: #07090E;
   overflow-x: hidden;
@@ -13,6 +18,7 @@ html {
 
 .first_screen_wrapper {
   width: 100vw;
+  min-height: 100vh;
   background-position: center;
   background-size: cover;
 }
