--- a/static/css/home.scss
+++ b/static/css/home.scss
@@ -7,6 +7,11 @@
     box-sizing: border-box;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 html {
     background-color: #07090E;
     overflow-x: hidden;
@@ -14,7 +19,7 @@ html {
 
 .first_screen_wrapper {
     width: 100vw;
-    // height: 100vh;
+    min-height: 100vh;
     background-position: center;
     background-size: cover;
     
@@ -161,10 +166,4 @@ html {
             }
         }
     }
-
-    
 }
-
-// p {
-//     display: none;
-// }
