--- a/static/css/home.scss
+++ b/static/css/home.scss
@@ -3,8 +3,12 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Open Sans";
+    font-family: "Roboto";
     box-sizing: border-box;
+}
+
+.hidden {
+    display: none;
 }
 
 a {
@@ -15,6 +19,7 @@ a {
 html {
     background-color: #07090E;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .first_screen_wrapper {
@@ -22,7 +27,7 @@ html {
     min-height: 100vh;
     background-position: center;
     background-size: cover;
-    
+
     .hero_image_wrapper {
         width: 100%;
         // height: 100vh;
@@ -31,7 +36,7 @@ html {
         align-items: center;
         position: relative;
         flex-direction: column;
-    
+
         .hero_image {
             width: 90%;
             min-width: 335px;
@@ -47,9 +52,9 @@ html {
             transform: translateY(-100%);
         }
     }
-    
+
     .oboz_logo {
-        position: fixed;
+        position: absolute;
         top: 10px;
         left: 50%;
         width: 155px;
@@ -62,12 +67,14 @@ html {
     width: 958px;
     min-width: 335px;
     margin: auto;
+    margin-bottom: 60px;
+    padding-top: 10px;
 
     .filters_wrapper {
         display: grid;
         grid-template-columns: 3fr 2fr 1.5fr 1fr 1fr;
         grid-gap: 10px;
-        margin-bottom: 60px;
+        margin-bottom: 50px;
 
         .filter_wrapper {
             display: flex;
@@ -83,7 +90,8 @@ html {
                 margin-bottom: 6px;
             }
 
-            input, select {
+            input,
+            select {
                 background: #FFFFFF1A;
                 outline: none;
                 border: none;
@@ -97,6 +105,10 @@ html {
 
             select {
                 appearance: none;
+
+                option {
+                    background-color: #07090E;
+                }
             }
 
             .select_down_arrow {
@@ -134,18 +146,61 @@ html {
 
     .hero_cards {
         display: grid;
-        grid-template-columns: repeat(6, 143px);
-        grid-gap: 20px;
-        margin-bottom: 200px;
+        width: 100%;
+        grid-template-columns: repeat(6, 160px);
 
         .hero_card {
-            img {
+            padding: 10px;
+            color: #EBEBEB;
+            box-sizing: border-box;
+            margin-bottom: 20px;
+            background-color: #07090E;
+            transition: background-color 0.3s;
+
+            .hero_image_wrapper {
+                overflow-y: hidden;
                 width: 142px;
                 height: 142px;
-                margin-bottom: 15px;
+                position: relative;
+
+                img {
+                    width: 142px;
+                    height: 142px;
+                }
+
+                .details {
+                    display: flex;
+                    background-color: #A76831;
+                    width: 142px;
+                    height: 36px;
+                    justify-content: center;
+                    align-items: center;
+                    position: absolute;
+                    transition: bottom 0.3s;
+                    bottom: -36px;
+
+                    .details_text {
+                        font-weight: 400;
+                        color: white;
+                        margin-bottom: 0;
+                    }
+
+                    .details_arrow {
+                        transform: rotate(-90deg);
+                        width: 16px;
+                        height: 16px;
+                        margin-bottom: 0;
+                    }
+                }
             }
 
-            color: #EBEBEB;
+            &:hover {
+                background-color: #FFFFFF0D;
+
+                .details {
+                    bottom: 0px;
+                }
+            }
 
             h2 {
                 font-size: 13px;
@@ -154,6 +209,7 @@ html {
                 line-height: 15.23px;
                 text-transform: uppercase;
                 margin-bottom: 8px;
+                margin-top: 15px;
             }
 
             p {
@@ -167,3 +223,81 @@ html {
         }
     }
 }
+
+.footer {
+    border-top: 1px solid #FFFFFF1A;
+    width: 100%;
+    height: 80px;
+
+    .footer_wrapper {
+        width: 958px;
+        height: 80px;
+        min-width: 335px;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        img {
+            width: 155px;
+            height: 38px;
+        }
+
+        p {
+            color: #EBEBEB;
+            font-size: 13px;
+            font-weight: 400;
+            line-height: 15px;
+        }
+    }
+}
+
+
+@media (max-width: 999px) {
+    .content_wrapper {
+        width: 632px;
+
+        .filters_wrapper {
+            grid-template-columns: 1fr 1fr 1fr;
+
+            .search {
+                grid-column: 1 / 3;   
+            }
+        }
+
+        .hero_cards {
+            grid-template-columns: repeat(4, 160px);
+        }
+    }
+    
+    .footer {
+        .footer_wrapper {
+            width: 632px;
+        }
+    }
+  }
+
+
+  @media (max-width: 671px) {
+    .content_wrapper {
+        width: 335px;
+
+        .filters_wrapper {
+            grid-template-columns: 1fr 1fr;
+
+            .search {
+                grid-column: 1 / 3;   
+            }
+        }
+
+        .hero_cards {
+            grid-template-columns: repeat(2, 160px);
+        }
+    }
+    
+    .footer {
+        .footer_wrapper {
+            width: 335px;
+        }
+    }
+  }
