--- a/static/css/home.css
+++ b/static/css/home.css
@@ -67,6 +67,7 @@ html {
 .content_wrapper .filters_wrapper {
   display: grid;
   grid-template-columns: 3fr 2fr 1.5fr 1fr 1fr;
+  justify-content: center;
   grid-gap: 10px;
   margin-bottom: 50px;
 }
@@ -221,6 +222,9 @@ html {
 }
 
 @media (max-width: 999px) {
+  .first_screen_wrapper {
+    min-height: unset;
+  }
   .content_wrapper {
     width: 632px;
   }
@@ -238,6 +242,9 @@ html {
   }
 }
 @media (max-width: 671px) {
+  .first_screen_wrapper {
+    min-height: unset;
+  }
   .content_wrapper {
     width: 335px;
   }
