--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -21,29 +22,37 @@ html {
 .main_wrapper {
   width: 100vw;
   min-height: 100vh;
-  background-color: beige;
+  background-color: rgba(0, 0, 0, 0.27);
+  background-image: url("../images/admin_background.webp");
+  background-size: contain;
   display: flex;
   justify-content: center;
   box-sizing: border-box;
 }
 .main_wrapper .content_wrapper {
-  width: 80%;
+  width: 70%;
   min-width: 325px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.677);
   padding: 20px 20px;
 }
+.main_wrapper .content_wrapper h1 {
+  margin-bottom: 10px;
+}
 .main_wrapper .content_wrapper .filter_wrapper {
-  padding: 20px 0;
+  padding: 20px 20px;
   position: sticky;
   top: 0;
   z-index: 100;
   background-color: white;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 .main_wrapper .content_wrapper .filter_wrapper button {
   background-color: greenyellow;
   padding: 3px 5px;
+  border: 2px solid green;
+  padding: 5px 10px;
 }
 .main_wrapper .content_wrapper .items_wrapper {
   display: grid;
@@ -94,7 +103,4 @@ html {
   position: absolute;
   top: 3px;
   right: 3px;
-}
-.main_wrapper h1 {
-  font-family: "Open Sans";
 }
