--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main_wrapper">
         <div class="content_wrapper">
-            <h1>Адмінка для Лесі (тільки для Лесі)</h1>
+            <h1>Адмінка пам'яті героїв</h1>
             <div class="filter_wrapper">
                 <div>
                     <label for="">Пошук по імені</label>
