--- a/static/css/login.scss
+++ b/static/css/login.scss
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background: rgb(2,0,36);
     background: linear-gradient(153deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
 
@@ -21,7 +22,6 @@
         width: 335px;
         display: flex;
         flex-direction: column;
-        margin: auto;
         border-radius: 10px;
         padding: 10px;
 
@@ -52,11 +52,12 @@
     }
 
     .error_window{
-        border: 2px solid red;
+        border: 2px solid rgba(241, 26, 26, 0.766);
         border-radius: 15px;
-        position: absolute;
-        bottom: 15px;
-        right: 15px;
-        max-width: 300px;
+        width: 315px;
+        color:  white;
+        text-align: center;
+        padding: 20px 40px;
+        margin-top: 15px;
     }
 }
