--- a/static/css/login.scss
+++ b/static/css/login.scss
@@ -29,7 +29,7 @@
             margin: 10px 0 5px 0;
         }
 
-        input {
+        input, password {
             background-color: unset;
             border: 1px solid teal;
             outline: none;
