--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
             <label for="username">Ім'я користувача</label>
             <input type="text" id="username" name="username" placeholder="Lesia Gasich">
             <label for="password">Пароль</label>
-            <input type="text" id="password" name="password">
+            <input type="password" id="password" name="password">
             <button>ЗАЙТИ</button>
         </form>
         {% if error %}
