add viewport to home

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
     <title>Сторінка пам'яті героїв війни | Obozrevatel</title>
     <meta name="description" content="Сторінка присвячена пам'яті героїв війни, що хоробро боронять нашу країну | Obozrevatel">
