--- a/templates/admin.html
+++ b/templates/admin.html
@@ -57,7 +57,7 @@
                         <label for="">Посилання</label>
                         <input class="heroLink" type="text">
                     </div>
-                    <button class="delete_button" onclick="selfDelete(this)">Видалити</button>
+                    <button class="delete_button" onclick="selfDelete(this, 0)">Видалити</button>
                 </div>
             </div>
         </div>
