--- a/templates/admin.html
+++ b/templates/admin.html
@@ -16,7 +16,7 @@
                     <label for="">Пошук по імені</label>
                     <input type="text" id="filterInput">
                 </div>
-                <button onclick="save()">Зберегти</button>
+                <!-- <button onclick="save()">Зберегти</button> -->
             </div>
             <div class="items_wrapper">
             </div>
