--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -104,4 +104,13 @@ html {
   position: absolute;
   top: 3px;
   right: 3px;
+  background-color: red;
+  color: white;
+}
+.main_wrapper .content_wrapper .items_wrapper .item_wrapper .create_button {
+  position: absolute;
+  top: 13px;
+  right: 3px;
+  background-color: green;
+  color: white;
 }
