--- a/static/css/admin.scss
+++ b/static/css/admin.scss
@@ -119,7 +119,7 @@ html {
                     color: white;
                 }
 
-                .create_button {
+                .save_button {
                     position: absolute;
                     top: 13px;
                     right: 3px;
