--- a/static/css/admin.scss
+++ b/static/css/admin.scss
@@ -111,20 +111,24 @@ html {
                     margin: 5px 0;
                 }
 
-                .delete_button {
+
+                .control_buttons {
                     position: absolute;
                     top: 3px;
                     right: 3px;
-                    background-color: red;
-                    color: white;
-                }
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-end;
 
-                .save_button {
-                    position: absolute;
-                    top: 13px;
-                    right: 3px;
-                    background-color: green;
-                    color: white;
+                    .delete_button {
+                        background-color: red;
+                        color: white;
+                    }
+    
+                    .save_button {
+                        background-color: green;
+                        color: white;
+                    }
                 }
             }
         }
