--- a/static/css/admin.scss
+++ b/static/css/admin.scss
@@ -119,6 +119,7 @@ html {
                     display: flex;
                     flex-direction: column;
                     align-items: flex-end;
+                    gap: 5px;
 
                     .delete_button {
                         background-color: red;
